--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
           make check/vet
 
       -
-        id: vet
+        id: fmt
         name: Vet
         run: |
           make check/fmt
